basic skeleton complete

--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -3,11 +3,12 @@
 
     <!-- Brand -->
     <a class="navbar-brand" href="{{webRoot}}/index.html">
-     Antel
+      Antel
     </a>
 
     <!-- Toggler -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+      aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -15,34 +16,87 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
 
       <!-- Toggler -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fe fe-x"></i>
       </button>
 
       <!-- Navigation -->
       <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarLandings" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="navbarLandings" data-bs-toggle="dropdown" href="#"
+            aria-haspopup="true" aria-expanded="false">
             Inicio
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarPages" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="navbarPages" data-bs-toggle="dropdown" href="#" aria-haspopup="true"
+            aria-expanded="false">
+            Servicios
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarAccount">
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/internet-residencial.html">Internet Residencial</a>
+            </li>
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/internet-corporativo.html">Internet Corporativo</a>
+
+            </li>
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/proyectos-electronicos.html">Proyectos Industriales Eléctronicos</a>
+            </li>
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/proyectos-telecom.html">Proyectos Industriales Telecomunicaciones</a>
+            </li>
+          </ul>
+        </li>
+
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" id="navbarPages" data-bs-toggle="dropdown" href="#" aria-haspopup="true"
+            aria-expanded="false">
             Promociones
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarPages" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="navbarPages" data-bs-toggle="dropdown" href="#" aria-haspopup="true"
+            aria-expanded="false">
             Blog
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarAccount" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="navbarAccount" data-bs-toggle="dropdown" href="#" aria-haspopup="true"
+            aria-expanded="false">
             Link de Interés
           </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarAccount">
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/internet-residencial.html">Cobertura</a>
+            </li>
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/internet-corporativo.html">Preguntas frecuentes</a>
+
+            </li>
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/proyectos-electronicos.html">Quienes somos</a>
+            </li>
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/proyectos-telecom.html">Velocímetro</a>
+            </li>
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/proyectos-telecom.html">Métodos de pago</a>
+            </li>
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/proyectos-telecom.html">Condiciones de servicio</a>
+            </li>
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/proyectos-telecom.html">Trabaja con nosotros</a>
+            </li>
+          </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-bs-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-bs-toggle="dropdown" href="#"
+            aria-haspopup="true" aria-expanded="false">
             Contactos
           </a>
         </li>
