finished three pages

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -75,8 +75,8 @@
       </ul>
     </div>
     <div class="col-6 col-md-6 col-lg-2">
-      <img src="{{webRoot}}/assets/img/icons/social/instagram.svg" class="list-social-icon" alt="...">
-
+      <img src="location.svg" class="" alt="...">
+      <img src="assets/img/location.svg" class="" alt="...">
     </div>
       <div class="col-6 col-md-6 col-lg-3">
           <li>
