--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -24,7 +24,7 @@
       <!-- Navigation -->
       <ul class="navbar-nav ms-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarLandings" data-bs-toggle="dropdown" href="#"
+          <a class="nav-link dropdown-toggle" id="navbarLandings" href="/index.html"
             aria-haspopup="true" aria-expanded="false">
             Inicio
           </a>
@@ -50,8 +50,6 @@
             </li>
           </ul>
         </li>
-
-
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" id="navbarPages" data-bs-toggle="dropdown" href="#" aria-haspopup="true"
             aria-expanded="false">
