recreated landing page

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -75,8 +75,7 @@
       </ul>
     </div>
     <div class="col-6 col-md-6 col-lg-2">
-      <img src="location.svg" class="" alt="...">
-      <img src="assets/img/location.svg" class="" alt="...">
+      <img src="https://i.ibb.co/DKr16d0/ubicacio-n.png" class="" alt="...">
     </div>
       <div class="col-6 col-md-6 col-lg-3">
           <li>
