--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -3,7 +3,7 @@
 
     <!-- Brand -->
     <a class="navbar-brand" href="{{webRoot}}/index.html">
-      Antel
+      <img src="https://i.ibb.co/4VyRBRP/logo.png"></img>
     </a>
 
     <!-- Toggler -->
