added blur and changed font

--- a/src/scss/_user.scss
+++ b/src/scss/_user.scss
@@ -2,6 +2,29 @@
 
 
 
+.text-primary{
+   color: #283c84 !important;
+
+}
+
+h1,
+p
+{
+   color: #606060 !important;
+}
+
+a{
+   color: #283c84 !important;
+
+}
+
+.text-muted{
+   color: #b3b3b3 !important;
+}
+
+
+
+
 @media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ 
 
 
@@ -94,4 +117,3 @@
 
      
 }
-
