added link de interes and contactos

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,25 +4,16 @@
       <div class="col-12 col-md-4 col-lg-3">
 
         <!-- Brand -->
-       <h2>Antel</h2>
+       <h2 class="text-muted">Antel</h2>
 
        
 
         <!-- Social -->
         <ul class="list-unstyled list-inline list-social mb-6 mb-md-0">
+    
           <li class="list-inline-item list-social-item me-3">
-            <a href="#!" class="text-decoration-none">
-              <img src="{{webRoot}}/assets/img/icons/social/instagram.svg" class="list-social-icon" alt="...">
-            </a>
-          </li>
-          <li class="list-inline-item list-social-item me-3">
-            <a href="#!" class="text-decoration-none">
+            <a href="https://www.facebook.com/AntelEcuador/" class="text-decoration-none">
               <img src="{{webRoot}}/assets/img/icons/social/facebook.svg" class="list-social-icon" alt="...">
-            </a>
-          </li>
-          <li class="list-inline-item list-social-item me-3">
-            <a href="#!" class="text-decoration-none">
-              <img src="{{webRoot}}/assets/img/icons/social/twitter.svg" class="list-social-icon" alt="...">
             </a>
           </li>
         </ul>
@@ -77,7 +68,7 @@
     <div class="col-6 col-md-6 col-lg-2">
       <img src="https://i.ibb.co/DKr16d0/ubicacio-n.png" class="" alt="...">
     </div>
-      <div class="col-6 col-md-6 col-lg-3">
+      <div class="col-6 col-md-6 col-lg-3 text-muted">
           <li>
             Guayas: Samborondon Business Center, Office Center, Oficina 133
           </li>
