--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -69,31 +69,30 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarAccount">
             <li class="dropdown-item dropend">
-              <a class="nav-link" href="/internet-residencial.html">Cobertura</a>
+              <a class="nav-link" href="/quienes-somos.html">Quienes somos</a>
             </li>
             <li class="dropdown-item dropend">
-              <a class="nav-link" href="/internet-corporativo.html">Preguntas frecuentes</a>
-
+              <a class="nav-link" href="/cobertura.html">Cobertura</a>
             </li>
             <li class="dropdown-item dropend">
-              <a class="nav-link" href="/proyectos-electronicos.html">Quienes somos</a>
+              <a class="nav-link" href="/te-ayudamos.html">Preguntas frecuentes</a>
             </li>
-            <li class="dropdown-item dropend">
+            <!-- <li class="dropdown-item dropend">
               <a class="nav-link" href="/proyectos-telecom.html">Velocímetro</a>
+            </li> -->
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/pricing.html">Métodos de pago</a>
             </li>
             <li class="dropdown-item dropend">
-              <a class="nav-link" href="/proyectos-telecom.html">Métodos de pago</a>
+              <a class="nav-link" href="/condiciones-de-servicio.html">Condiciones de servicio</a>
             </li>
             <li class="dropdown-item dropend">
-              <a class="nav-link" href="/proyectos-telecom.html">Condiciones de servicio</a>
-            </li>
-            <li class="dropdown-item dropend">
-              <a class="nav-link" href="/proyectos-telecom.html">Trabaja con nosotros</a>
+              <a class="nav-link" href="/trabaja.html">Trabaja con nosotros</a>
             </li>
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" id="navbarDocumentation" data-bs-toggle="dropdown" href="#"
+          <a class="nav-link" id="navbarDocumentation"  href="/contactos.html"
             aria-haspopup="true" aria-expanded="false">
             Contactos
           </a>
