--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -2,7 +2,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="{{webRoot}}/assets/favicon/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="https://i.ibb.co/4VyRBRP/logo.png" type="image/x-icon" />
+<!-- <img src="https://i.ibb.co/4VyRBRP/logo.png"></img> -->
 
 <!-- Map CSS -->
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css" />
@@ -14,4 +15,4 @@
 <link rel="stylesheet" href="{{webRoot}}/assets/css/theme.bundle.css" />
 
 <!-- Title -->
-<title>{{title}}</title>
+<title>Antel</title>
