--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -77,9 +77,9 @@
             <li class="dropdown-item dropend">
               <a class="nav-link" href="/te-ayudamos.html">Preguntas frecuentes</a>
             </li>
-            <!-- <li class="dropdown-item dropend">
-              <a class="nav-link" href="/proyectos-telecom.html">Velocímetro</a>
-            </li> -->
+            <li class="dropdown-item dropend">
+              <a class="nav-link" href="/test.html">Velocímetro</a>
+            </li>
             <li class="dropdown-item dropend">
               <a class="nav-link" href="/pricing.html">Métodos de pago</a>
             </li>
